# City-Open-Data

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml  railway.json  seed_historical.py  tasks.md
.ai/: architecture.md  context.md  refactor-context.md  rules.md  standards.md  tasks.md  workflow.md
.github/workflows/: ci.yml  seed-live.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: routes.py
apps/api/app/api/v1/endpoints/: admin.py  alerts.py  analytics.py  anomalies.py  api_keys.py  auth.py  export.py  map_endpoints.py  metrics_endpoints.py  reports.py  sensors.py
apps/api/app/core/: anomaly.py  dependencies.py  minio_client.py  redis_client.py  websocket_handler.py
apps/api/app/middleware/: api_key_auth.py
apps/api/app/routers/: chatbot.py  forecast.py  intelligence.py  internal.py  maps.py  public_api.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: api_keys.py  city_health.py
apps/api/tests/: conftest.py  test_auth.py
apps/simulator/: .env.example  Dockerfile  pyproject.toml
apps/simulator/app/: generator.py  main.py  publisher.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/developer/: page.tsx
apps/web/src/app/export/: page.tsx
apps/web/src/components/: AddressSearchBar.tsx  AiStatusBadge.tsx  AppShell.tsx  CityHealth.tsx  DailyBriefing.tsx  DemoBadge.tsx  ExportPanel.tsx  FreshnessIndicator.tsx  FutureCityMap.tsx  HeroMap.tsx  IntelligencePanel.tsx  LocationPicker.tsx  MapView.tsx  PageState.tsx  ScenarioSimulator.tsx  SeismicAlertModal.tsx  SeismicAlertWrapper.tsx  SensorCharts.tsx  SensorDrawer.tsx  SensorQRCode.tsx  ThematicMap.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  chatbot-context.ts  idw-layer.ts  map-layers.ts  map-styles.ts  marker-icons.ts  theme-context.tsx
apps/web/src/workers/: idw.worker.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: anomaly.py  main.py
infrastructure/grafana/provisioning/dashboards/: default.yml
infrastructure/nginx/: default.conf
infrastructure/prometheus/: prometheus.yml
(+20 files in other folders)
