[tool.poetry]
name = "smart-city-api"
version = "0.1.0"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115"}
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
aio-pika = "^9.4"
redis = "^5.1"
minio = "^7.2"
prophet = "^1.3"
anthropic = "^0.49"
smart-city-shared = {path = "../../packages/shared", develop = true}
smart-city-database = {path = "../../packages/database", develop = true}
smart-city-auth = {path = "../../packages/auth", develop = true}
smart-city-observability = {path = "../../packages/observability", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
