[tool.poetry]
name = "smart-city-simulator"
version = "0.1.0"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4"
smart-city-shared = {path = "../../packages/shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
